# ros_course

./: .gitignore  README.md
module00/ex01/: .bashrc  ex01.txt
module00/ex02/: package_path_rostopic.txt
module00/ex03/wfram/: CMakeLists.txt  package.xml
module00/ex04/: catkin_make.txt
module00/ex05/: rosnode_list.txt  rosnode_ping.txt
module00/ex06/: cmd_vel.txt
module00/ex07/: parameter_server.txt  rosservice_list.txt
module00/ex08/: rqt_console.txt  three_turtles.launch
module00/ex09/: CMakeLists.txt  package.xml
module00/ex10/: CMakeLists.txt  package.xml
module00/ex10/src/: publisher.cpp  text_to_cmd_vel.cpp
module01/ex00/service_full_name/: CMakeLists.txt  package.xml
module01/ex00/service_full_name/src/: client_name.cpp  service_name.cpp
module01/ex01/action_turtle_commands/: CMakeLists.txt  package.xml
module01/ex01/action_turtle_commands/action/: execute_turtle_commands.action
module01/ex01/action_turtle_commands/include/: action_server_class.h
module01/ex01/action_turtle_commands/src/: action_client.cpp  action_server.cpp
module01/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.bag
module01/ex03/: roswtf.txt
module01/ex04/move_to_goal/: CMakeLists.txt  package.xml
module01/ex04/move_to_goal/include/move_to_goal/: move_to_goal.h
module01/ex04/move_to_goal/src/: move_to_goal.cpp
module02/ex00/: last_transform.txt  transform.txt
module02/ex01/learning_tf2/: CMakeLists.txt
module02/ex01/learning_tf2/launch/: start_demo.launch
module02/ex01/learning_tf2/src/: static_turtle_tf2_broadcaster.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
module02/ex02/learning_tf2/: package.xml
module02/ex02/learning_tf2/launch/: start_demo.launch
module02/ex02/learning_tf2/rviz/: carrot.rviz
module02/ex02/learning_tf2/src/: broadcast.cpp  ex01.cpp  turtle_tf2_broadcaster_carrot.cpp  turtle_tf2_listener.cpp
module03/ex00/: robot.urdf  robot_display.launch
module03/ex01/: robot.urdf.xacro  robot_display.launch
module03/ex02/robot_diff_drive/config/: custer.yaml
module03/ex02/robot_diff_drive/launch/: robot_gazebo.launch
module03/ex02/robot_diff_drive/urdf/: robot.urdf.xacro
module03/ex03/circle_movement/: CMakeLists.txt  package.xml
module03/ex03/circle_movement/launch/: circle_movement.launch
module03/ex03/circle_movement/rviz/: urdf.rviz
module03/ex03/circle_movement/src/: circle_movement.cpp
module04/ex00/robot_diff_drive/: CMakeLists.txt
module04/ex00/robot_diff_drive/rviz/: urdf.rviz
module04/ex00/robot_diff_drive/urdf/: robot.urdf.xacro
module04/ex01/robot_diff_drive/rviz/: urdf.rviz
module04/ex01/robot_diff_drive/urdf/: robot.gazebo.xacro  robot.urdf.xacro
module04/ex02/robot_diff_drive/: package.xml
module04/ex02/robot_diff_drive/launch/: robot_imu.launch
module04/ex02/robot_diff_drive/rviz/: urdf.rviz
module04/ex02/robot_diff_drive/urdf/: robot.urdf.xacro
module04/ex02/robot_diff_drive/worlds/: obstacles.world
module04/ex03/robot_diff_drive/: CMakeLists.txt
module04/ex03/robot_diff_drive/launch/: robot_imu.launch
module04/ex03/robot_diff_drive/src/: robot_diff_drive.cpp
module04/ex04/robot_diff_drive/rviz/: urdf.rviz
module04/ex04/robot_diff_drive/urdf/: robot.urdf.xacro
module05/ex00/: map_turtlebot3_house.pgm  map_turtlebot3_house.yaml
module05/ex02/robot_diff_drive/: CMakeLists.txt
module05/ex02/robot_diff_drive/launch/: amcl.launch  move_base.launch  robot_imu.launch
module05/ex02/robot_diff_drive/maps/: map_my_robot_house.yaml
module05/ex02/robot_diff_drive/rviz/: urdf.rviz
module05/ex02/robot_diff_drive/urdf/: robot.urdf.xacro
module06/ex00/: map_turtlebot3_world.pgm  map_turtlebot3_world.yaml
module06/ex01/robot_diff_drive/rviz/: urdf.rviz
module07/ex00/testbot_description/: package.xml
module07/ex01/config/: open_manipulator.srdf
module07/ex02/: vokoscreen-2022-06-01_18-27-31.mkv
module07/ex02/openmanipulator_learn/: .setup_assistant  CMakeLists.txt  package.xml
module08/ex00/computer_vision/: CMakeLists.txt  package.xml
module08/ex00/computer_vision/include/computer_vision/: ImageConverter.h
module08/ex00/computer_vision/launch/: day_08_ex_00.launch
module08/ex00/computer_vision/src/: color_switcher_node.cpp  publisher_node.cpp
module08/ex01/computer_vision/: CMakeLists.txt  package.xml
module08/ex02/computer_vision/: CMakeLists.txt
module08/ex03/computer_vision/: CMakeLists.txt  package.xml
module08/ex03/computer_vision/cfg/: CannyDetection.cfg
module08/ex03/computer_vision/include/computer_vision/: ImageConverter.h
module08/ex03/computer_vision/launch/: day_08_ex_03.launch
module08/ex03/computer_vision/rviz/: AR.rviz
module08/ex03/computer_vision/src/: server.cpp
module09/ex00/robot_behavior/: CMakeLists.txt
module09/ex01/robot_behavior/: CMakeLists.txt  package.xml
module09/ex01/robot_behavior/include/: dummy_nodes.h
module09/ex01/robot_behavior/launch/: day_09_ex_01.launch
module09/ex01/robot_behavior/src/: tree.cpp
module09/ex02/robot_diff_drive/: CMakeLists.txt  package.xml
module09/ex02/robot_diff_drive/bt/: tree.xml
module09/ex02/robot_diff_drive/config/: diffdrive.yaml
module09/ex02/robot_diff_drive/include/: dummy_nodes.h
module09/ex02/robot_diff_drive/launch/: amcl.launch  day_09_ex_02.launch
module09/ex02/robot_diff_drive/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
module09/ex02/robot_diff_drive/rviz/: urdf.rviz
module09/ex02/robot_diff_drive/src/: battery_status.cpp  tree.cpp
module09/ex02/robot_diff_drive/urdf/: robot_diff_drive.gazebo.xacro
(+49 files in other folders)
